removed extra align classes, fixed overflowing align elements when the parent element has no alignment but child elements have wide or full

--- a/theme/scss/site/layout.scss
+++ b/theme/scss/site/layout.scss
@@ -22,7 +22,7 @@ body {
 }
 
 // make sure align elements inside align elements behave properly. note: the page also uses align, but in a <main> tag
-div.alignfull, div.alignwide {
+div.alignfull, div.alignwide, div.is-layout-constrained > :where(:not(.alignleft):not(.alignright):not(.alignfull)) {
 	.alignfull, .alignwide {
 		width: 100%;
 		margin-left: 0px;
